--- a/index.html
+++ b/index.html
@@ -1,11 +1,48 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+<link rel="stylesheet" href="css/styles.css" type="text/css">
+<script src="js/jquery-3.5.1.js"></script>
+<script src="js/scripts.js"></script>
   <title>Cooking Calculator</title>
 </head>
 <body>
   <h1>Cooking Calculator</h1>
-  <script src="js/scripts.js"></script>
+    <div class="container">
+      <div class="row">
+        <div class="form-group col-4">
+            
+            <label for="cups">No. of Cups to convert to Fl Oz:</label>
+            <input id="cups" class="form-control" type="text">
+
+            <form id="cupsId">
+            <button type="submit" class="btn col-4 btn-danger">Convert!</button>
+            </form>
+
+        </div>
+        <div class="form-group col-4">
+
+            <label for="tbsp">No. of Tsp to convert to Tbsp:</label>
+            <input id="tbsp" class="form-control" type="text">
+            
+            <form id="tbspId">
+            <button type="submit" class="btn col-4 btn-danger">Convert!</button>
+            </form>
+
+        </div>
+        <div class="form-group col-4">
+
+            <label for="quart">No. of Quarts to convert to gallons:</label>
+            <input id="quart" class="form-control"  type="text">
+
+            <form id="quartId">
+            <button type="submit" class="btn col-4 btn-danger">Convert!</button>
+            </form>
+        </div>
+      </div>
+      <div id="output"></div>
+    </div>
 </body>
 
 </html>
